[package]
name = "hhkb-studio-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hhkb-studio-tools"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bstr = "1.9.0"
clap = { version = "4.4.18", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
